# ephmrl

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  healthcheck.sh  main.py  pyproject.toml
.github/workflows/: release.yaml  security-scan.yaml
alembic/: env.py
alembic/versions/: 028bd26b9b6c_modify_plan_seed_data_for_new_features.py  05947c6a535e_seed_permissions_data.py  18acf2ea5608_create_users_table.py  2044729ed745_add_maximum_tenants_column_in_llm_instances.py  2e84c2936161_seed_roles_data.py  53021582e4ed_create_gpu_hosting_llm_machine_project_.py  6193c843d251_seed_model_permissions_data.py  70a8402a4332_seed_plugin_data.py  7a10bf6e5547_seed_listed_llm_and_llm_instance_data.py  850f1eeee1a5_create_table_to_store_form_data.py  8968f75c2846_seed_role_permissions_assignments.py  93f78b911def_seed_plans_data.py  978e64eace3f_create_plugin_and_org_plugin_tables.py  a840737e9cc9_remove_column_name_from_table_name.py  bb188663be94_add_org_role_plan_perm_credit.py  e0d328b81f69_create_table_plugin_to_store_available_.py  f0ac6936c433_create_form_table.py
frontend/: .gitignore  Dockerfile  components.json  package-lock.json  package.json  tsconfig.json
frontend/public/: manifest.json
frontend/src/: routeTree.gen.ts  router.tsx  styles.css
src/: configuration.py  constants.py  database.py  dependency.py  main.py  security.py  server.py  utils.py  websocket.py
src/crud/: admin.py  form.py  inference.py  listed_llm.py  llm.py  organization.py  plugin.py  project.py  role.py  user.py
src/endpoints/: admin.py  auth.py  form.py  (+9 more)
(+121 files in other folders)
