[project]
name = "ephmrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.1",
    "httptools>=0.7.1",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "passlib[argon2]>=1.7.4",
    "polar-sdk>=0.28.0",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.4",
    "pyjwt[crypto]>=2.10.1",
    "resend>=2.19.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "uvloop>=0.22.1 ; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
